--- a/src/app.html
+++ b/src/app.html
@@ -2,11 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Svelecte - autocomplete component in svelte</title>
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		%sveltekit.head%
-		<link rel="stylesheet" href="%sveltekit.assets%/normalize.css">
 		<style>
+			@media (prefers-color-scheme: dark) {
+				html {
+					background-color: #1b1b1f;
+				}
+			}
 			.dark {
 				& .highlight {
 					background-color: #626262;
@@ -24,6 +28,7 @@
 				}
 			}
 		</style>
+		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div>%sveltekit.body%</div>
