--- a/src/app.html
+++ b/src/app.html
@@ -28,6 +28,14 @@
 				}
 			}
 		</style>
+		<script>
+			let mode = 'light';
+			const storedTheme = localStorage.getItem('theme');
+			if (!storedTheme && window.matchMedia('(prefers-color-scheme: dark)').matches) {
+				mode = 'dark';
+			}
+			document.documentElement.classList.add(storedTheme || mode);
+		</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
